fix(vue-preview): harden generated project validation